Removes deprecated HttpThrowableReporter
Change-Id: I1546cddde2889cf743f7f6146df99b81dfcfd145

--- a/tools/api-checker/config/gwt27_28userApi.conf
+++ b/tools/api-checker/config/gwt27_28userApi.conf
@@ -157,3 +157,6 @@ java.util.IdentityHashMap::getStringValue(Ljava/lang/String;) MISSING
 java.util.IdentityHashMap::hasStringValue(Ljava/lang/String;) MISSING
 java.util.IdentityHashMap::putStringValue(Ljava/lang/String;Ljava/lang/Object;) MISSING
 java.util.IdentityHashMap::removeStringValue(Ljava/lang/String;) MISSING
+
+# Removed deprecated HttpThrowableReporter
+com.google.gwt.core.client.HttpThrowableReporter MISSING
