--- a/user/build.xml
+++ b/user/build.xml
@@ -80,6 +80,12 @@
     <pathelement location="${gwt.tools.lib}/jboss/test-harness/jboss-test-harness-api-1.0.0.jar"/>
     <pathelement location="${gwt.tools.lib}/testng/testng-5.14.1-sources.jar"/>
     <pathelement location="${gwt.tools.lib}/testng/testng-5.14.1-nojunit.jar"/>
+    <pathelement
+        location="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/websocket-api-9.2.6.v20141205.jar"/>
+    <pathelement
+        location="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/websocket-client-9.2.6.v20141205.jar"/>
+    <pathelement
+        location="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/websocket-server-9.2.6.v20141205.jar"/>
     <pathelement location="${gwt.dev.jar}"/>
     <pathelement location="${gwt.tools.lib}/gss/2014-09-11/closure-stylesheets-rebased.jar"/>
   </path>
@@ -90,8 +96,7 @@
     <gwt.javac excludes="**/super/**">
       <classpath>
         <pathelement location="${gwt.tools.lib}/gss/2014-09-11/closure-stylesheets-rebased.jar"/>
-        <pathelement
-            location="${gwt.tools.lib}/jetty/jetty-8.1.12.v20130726/servlet-api-3.0-NoMetaInf.jar"/>
+        <pathelement location="${gwt.tools.lib}/tomcat/tomcat-servlet-api-8.0.5.jar"/>
         <pathelement location="${gwt.tools.lib}/junit/junit-4.8.2.jar"/>
         <pathelement location="${gwt.tools.lib}/selenium/selenium-java-client-driver.jar"/>
         <pathelement location="${gwt.tools.lib}/w3c/sac/sac-1.3.jar"/>
@@ -146,7 +151,7 @@
       <fileset dir="src" excludes="**/package.html"/>
       <fileset dir="super" excludes="**/package.html"/>
       <fileset dir="${javac.out}"/>
-      <zipfileset src="${gwt.tools.lib}/jetty/jetty-8.1.12.v20130726/servlet-api-3.0-NoMetaInf.jar"
+      <zipfileset src="${gwt.tools.lib}/tomcat/tomcat-servlet-api-8.0.5.jar"
                   excludes="**/*.java"/>
       <zipfileset src="${gwt.tools.lib}/w3c/sac/sac-1.3.jar"/>
       <zipfileset src="${gwt.tools.lib}/w3c/flute/flute-1.3-gg2.jar"/>
