--- a/eclipse/dev/.classpath
+++ b/eclipse/dev/.classpath
@@ -8,7 +8,15 @@
 	<classpathentry kind="var" path="GWT_TOOLS/lib/apache/tapestry-util-text-4.0.2.jar" sourcepath="/GWT_TOOLS/lib/apache/tapestry-util-text-4.0.2-src.zip"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/eclipse/jdt-3.10.0.jar" sourcepath="/GWT_TOOLS/lib/eclipse/jdt-3.10.0-src.zip"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/eclipse/jdtCompilerAdapter-3.10.0.jar"/>
-	<classpathentry kind="var" path="GWT_TOOLS/lib/jetty/jetty-8.1.12.v20130726/jetty-8.1.12.v20130726.jar"/>
+	<classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-http-9.2.6.v20141205.jar"/>
+	<classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-io-9.2.6.v20141205.jar"/>
+	<classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-server-9.2.6.v20141205.jar"/>
+	<classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-servlet-9.2.6.v20141205.jar"/>
+	<classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-util-9.2.6.v20141205.jar"/>
+	<classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-webapp-9.2.6.v20141205.jar"/>
+	<classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-xml-9.2.6.v20141205.jar"/>
+        <classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-security-9.2.6.v20141205.jar"/>
+        <classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/jetty/jetty-9.2.6.v20141205/jetty-servlets-9.2.6.v20141205.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/jsr305/jsr305.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/junit/junit-4.8.2.jar" sourcepath="/GWT_TOOLS/lib/junit/junit-4.8.2-src.zip"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/objectweb/asm-5.0.3/lib/asm-all-5.0.3.jar"/>
@@ -19,14 +27,14 @@
 	<classpathentry kind="var" path="GWT_TOOLS/lib/tomcat/jasper-compiler-1.0.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/tomcat/jasper-runtime-1.0.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/tomcat/jsp-api-2.0.jar"/>
-	<classpathentry kind="var" path="GWT_TOOLS/lib/htmlunit/htmlunit-2.13/htmlunit-core-js-2.13.jar"/>
-	<classpathentry kind="var" path="GWT_TOOLS/lib/htmlunit/htmlunit-2.13/htmlunit-2.13.jar"/>
+	<classpathentry kind="var" path="GWT_TOOLS/lib/htmlunit/htmlunit-2.16-SNAPSHOT/htmlunit-2.16-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="GWT_TOOLS/lib/htmlunit/htmlunit-2.16-SNAPSHOT/htmlunit-core-js-2.16-20140820.061404-3.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/protobuf/protobuf-2.5.0/protobuf-java-rebased-2.5.0.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/guava/guava-16.0.1/guava-16.0.1-rebased.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/jscomp/20131118.json.rebased/sourcemap-rebased.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/jscomp/20131118.json.rebased/compiler-rebased.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/json/android-sdk-19.1/json-android-rebased.jar"/>
 	<classpathentry kind="var" path="GWT_TOOLS/lib/apache/commons/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="var" path="GWT_TOOLS/lib/jetty/jetty-8.1.12.v20130726/servlet-api-3.0-NoMetaInf.jar"/>
+	<classpathentry exported="true" kind="var" path="GWT_TOOLS/lib/tomcat/tomcat-servlet-api-8.0.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
