--- a/dev/build.xml
+++ b/dev/build.xml
@@ -67,10 +67,20 @@
           <include name="objectweb/asm-5.0.3/lib/asm-all-5.0.3.jar"/>
           <include name="guava/guava-16.0.1/guava-16.0.1-rebased.jar"/>
           <include name="icu4j/50.1.1/icu4j.jar"/>
-          <include name="jetty/jetty-8.1.12.v20130726/jetty-8.1.12.v20130726.jar"/>
-          <include name="jetty/jetty-8.1.12.v20130726/servlet-api-3.0-NoMetaInf.jar"/>
           <include name="jscomp/20131118.json.rebased/compiler-rebased.jar"/>
           <include name="jscomp/20131118.json.rebased/sourcemap-rebased.jar"/>
+          <include name="tomcat/tomcat-servlet-api-8.0.5.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-http-9.2.6.v20141205.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-io-9.2.6.v20141205.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-server-9.2.6.v20141205.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-servlet-9.2.6.v20141205.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-util-9.2.6.v20141205.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-webapp-9.2.6.v20141205.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-xml-9.2.6.v20141205.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-security-9.2.6.v20141205.jar"/>
+          <include name="jetty/jetty-9.2.6.v20141205/jetty-servlets-9.2.6.v20141205.jar"/>
+          <include name="jscomp/20131118/compiler-rebased.jar"/>
+          <include name="jscomp/20131118/sourcemap-rebased.jar"/>
           <include name="jsr305/jsr305.jar"/>
           <include name="protobuf/protobuf-2.5.0/protobuf-java-rebased-2.5.0.jar"/>
           <!-- dependencies needed for JSP support in DevMode: BEGIN -->
@@ -90,8 +100,8 @@
           <include name="apache/commons/commons-lang3-3.1.jar"/>
           <include name="apache/commons/commons-logging-1.1.3.jar"/>
           <include name="cssparser/cssparser-0.9.11.jar"/>
-          <include name="htmlunit/htmlunit-2.13/htmlunit-2.13.jar"/>
-          <include name="htmlunit/htmlunit-2.13/htmlunit-core-js-2.13.jar"/>
+          <include name="htmlunit/htmlunit-2.16-SNAPSHOT/htmlunit-2.16-SNAPSHOT.jar"/>
+          <include name="htmlunit/htmlunit-2.16-SNAPSHOT/htmlunit-core-js-2.16-20140820.061404-3.jar"/>
           <include name="nekohtml/nekohtml-1.9.19.jar"/>
           <include name="cup/java-cup-11a.jar"/>
           <include name="xalan/xalan-2.7.1-nocup.jar"/>
@@ -118,13 +128,31 @@
           <zipfileset
               src="${gwt.tools.lib}/eclipse/jdtCompilerAdapter-3.10.0.jar"/>
           <zipfileset src="${gwt.tools.lib}/guava/guava-16.0.1/guava-16.0.1-rebased.jar"/>
-          <zipfileset src="${gwt.tools.lib}/icu4j/50.1.1/icu4j.jar"/>
           <zipfileset
-              src="${gwt.tools.lib}/jetty/jetty-8.1.12.v20130726/jetty-8.1.12.v20130726.jar"/>
-          <zipfileset
-              src="${gwt.tools.lib}/jetty/jetty-8.1.12.v20130726/servlet-api-3.0-NoMetaInf.jar"/>
+              src="${gwt.tools.lib}/icu4j/50.1.1/icu4j.jar"/>
+          <zipfileset src="${gwt.tools.lib}/jscomp/20131118/compiler-rebased.jar"/>
+          <zipfileset src="${gwt.tools.lib}/jscomp/20131118/sourcemap-rebased.jar"/>
           <zipfileset src="${gwt.tools.lib}/jscomp/20131118.json.rebased/compiler-rebased.jar"/>
           <zipfileset src="${gwt.tools.lib}/jscomp/20131118.json.rebased/sourcemap-rebased.jar"/>
+          <zipfileset src="${gwt.tools.lib}/tomcat/tomcat-servlet-api-8.0.5.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-http-9.2.6.v20141205.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-io-9.2.6.v20141205.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-server-9.2.6.v20141205.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-servlet-9.2.6.v20141205.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-util-9.2.6.v20141205.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-webapp-9.2.6.v20141205.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-xml-9.2.6.v20141205.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-security-9.2.6.v20141205.jar"/>
+          <zipfileset
+              src="${gwt.tools.lib}/jetty/jetty-9.2.6.v20141205/jetty-servlets-9.2.6.v20141205.jar"/>
           <zipfileset src="${gwt.tools.lib}/jsr305/jsr305.jar"/>
           <zipfileset
               src="${gwt.tools.lib}/protobuf/protobuf-2.5.0/protobuf-java-rebased-2.5.0.jar"/>
@@ -146,9 +174,8 @@
           <zipfileset src="${gwt.tools.lib}/apache/commons/commons-lang3-3.1.jar"/>
           <zipfileset src="${gwt.tools.lib}/apache/commons/commons-logging-1.1.3.jar"/>
           <zipfileset src="${gwt.tools.lib}/cssparser/cssparser-0.9.11.jar"/>
-          <zipfileset src="${gwt.tools.lib}/htmlunit/htmlunit-2.13/htmlunit-2.13.jar"/>
-          <zipfileset
-              src="${gwt.tools.lib}/htmlunit/htmlunit-2.13/htmlunit-core-js-2.13.jar"/>
+          <zipfileset src="${gwt.tools.lib}/htmlunit/htmlunit-2.16-SNAPSHOT/htmlunit-2.16-SNAPSHOT.jar"/>
+          <zipfileset src="${gwt.tools.lib}/htmlunit/htmlunit-2.16-SNAPSHOT/htmlunit-core-js-2.16-20140820.061404-3.jar"/>
           <zipfileset src="${gwt.tools.lib}/nekohtml/nekohtml-1.9.19.jar"/>
           <zipfileset src="${gwt.tools.lib}/cup/java-cup-11a.jar"/>
           <zipfileset src="${gwt.tools.lib}/xalan/xalan-2.7.1-nocup.jar"/>
