Codeserver: Fix compilation error
One place that non rebased JSON library is tried to be used is in:

codeserver/java/com/google/gwt/dev/codeserver/ReverseSourceMap.java:44

error: cannot access JSONObject
consumer.parse(unparsed);

Add non-rebased json distribution to the classpath.

Change-Id: I800500a2e52814ab92826ae1a6f2fdcdc6248407

--- a/dev/codeserver/build.xml
+++ b/dev/codeserver/build.xml
@@ -10,6 +10,7 @@
     <gwt.javac srcdir="java">
       <classpath>
         <pathelement location="${gwt.dev.jar}" />
+        <pathelement location="${gwt.tools.lib}/json/android-sdk-19.1/json-android.jar"/>
       </classpath>
     </gwt.javac>
   </target>
