--- a/eclipse/user/.project
+++ b/eclipse/user/.project
@@ -15,8 +15,6 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
-	</buildSpec>
-	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</nature>
 	</natures>
@@ -24,7 +22,7 @@
 		<link>
 			<name>core</name>
 			<type>2</type>
-			<locationURI>GWT_ROOT/user</locationURI>
+			<location>GWT_ROOT/user</location>
 		</link>
 	</linkedResources>
 </projectDescription>
