Remove comment according to Issue #6874
bug: issue 6874
Change-Id: I9ef5a8d2489f727fb24330a9b2eb1692798b3c7e

--- a/eclipse/user/.project
+++ b/eclipse/user/.project
@@ -16,7 +16,7 @@
 			</arguments>
 		</buildCommand>
 	</buildSpec>
-	<natures>
+	</natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</nature>
 	</natures>
