Moves some gwt-user super-sources to correct locations.
Besides being consistent with the rest, this actually
enables developers to add them as source roots in
Eclipse, otherwise they can't as their parent is already
a source root.

Change-Id: Iab3a9e4b3f52cbc79d0f554e3b91940e8d044c30
Review-Link: https://gwt-review.googlesource.com/#/c/11381/

--- a/build.xml
+++ b/build.xml
@@ -220,6 +220,10 @@
         <fileset dir="${gwt.build.lib}" includes="gwt-user.jar,gwt-dev.jar"/>
         <pathelement path="${java.class.path}"/>
         <pathelement location="${gwt.tools.lib}/apache/ant-1.6.5.jar"/>
+        <pathelement location="${gwt.tools.lib}/javax/validation/validation-api-1.0.0.GA.jar"/>
+        <pathelement
+            location="${gwt.tools.lib}/hibernate/validator/hibernate-validator-4.1.0.Final.jar"/>
+
       </classpath>
       <arg value="-refJar"/>
       <arg path="${gwt.apicheck.referencelibs}"/>
