--- a/dev/build.xml
+++ b/dev/build.xml
@@ -62,8 +62,8 @@
           <include name="apache/tapestry-util-text-4.0.2.jar"/>
           <include name="apache/ant-1.6.5.jar"/>
           <include name="colt/colt-1.2.jar"/>
-          <include name="eclipse/jdt-3.10.0.jar"/>
-          <include name="eclipse/jdtCompilerAdapter-3.10.0.jar"/>
+          <include name="eclipse/org.eclipse.jdt.core_3.11.0.v20150126-2015.jar"/>
+          <include name="eclipse/jdtCompilerAdapter_3.11.0.v20150126-2015.jar"/>
           <include name="objectweb/asm-5.0.3/lib/asm-all-5.0.3.jar"/>
           <include name="guava/guava-16.0.1/guava-16.0.1-rebased.jar"/>
           <include name="icu4j/50.1.1/icu4j.jar"/>
@@ -114,9 +114,9 @@
           <zipfileset src="${gwt.tools.lib}/apache/ant-1.6.5.jar"/>
           <zipfileset src="${gwt.tools.lib}/colt/colt-1.2.jar"/>
           <zipfileset
-              src="${gwt.tools.lib}/eclipse/jdt-3.10.0.jar"/>
+              src="${gwt.tools.lib}/eclipse/org.eclipse.jdt.core_3.11.0.v20150126-2015.jar"/>
           <zipfileset
-              src="${gwt.tools.lib}/eclipse/jdtCompilerAdapter-3.10.0.jar"/>
+              src="${gwt.tools.lib}/eclipse/jdtCompilerAdapter_3.11.0.v20150126-2015.jar"/>
           <zipfileset src="${gwt.tools.lib}/guava/guava-16.0.1/guava-16.0.1-rebased.jar"/>
           <zipfileset src="${gwt.tools.lib}/icu4j/50.1.1/icu4j.jar"/>
           <zipfileset
@@ -201,9 +201,9 @@
         <pathelement
             location="${gwt.tools.lib}/apache/commons/commons-collections-3.2.1.jar"/>
         <pathelement
-            location="${gwt.tools.lib}/eclipse/jdt-3.10.0.jar"/>
+            location="${gwt.tools.lib}/eclipse/org.eclipse.jdt.core_3.11.0.v20150126-2015.jar"/>
         <pathelement
-            location="${gwt.tools.lib}/eclipse/jdtCompilerAdapter-3.10.0.jar"/>
+            location="${gwt.tools.lib}/eclipse/jdtCompilerAdapter_3.11.0.v20150126-2015.jar"/>
         <pathelement
             location="${gwt.tools.lib}/guava/guava-16.0.1/guava-16.0.1-rebased.jar"/>
         <pathelement location="${gwt.tools.lib}/jscomp/20131118.json.rebased/compiler-rebased.jar"/>
