--- a/eclipse/samples/Hello/.classpath
+++ b/eclipse/samples/Hello/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="core/src"/>
 	<classpathentry kind="src" output="war" path="core/war"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gwt-codeserver"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gwt-user"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
