--- a/user/BUILD
+++ b/user/BUILD
@@ -66,6 +66,8 @@ java_library(
         ],
         exclude = [
             "src/com/google/gwt/junit/**/*.java",  # see gwt-testing
+            "**/ConsoleLogger.java", # relies on internal APIs
+            "**/SuperDevModeLogger.java", # relies on ConsoleLogger
             "**/EmulatedCharset.java",
             "**/HashCodes.java",  # relies on java8 only APIs
             "**/RunStyleSelenium.java",
