Implement PriorityQueue.iterator()
Change-Id: Ie1927ce2b0555920d6801709738a6d303371655f

--- a/tools/api-checker/config/gwt27_28userApi.conf
+++ b/tools/api-checker/config/gwt27_28userApi.conf
@@ -219,3 +219,7 @@ java.util.AbstractQueue::offer(Ljava/lang/Object;) MISSING
 java.util.AbstractQueue::peek() MISSING
 java.util.AbstractQueue::poll() MISSING
 java.util.AbstractSequentialList::size() MISSING
+
+# Removed some JRE incompatible PriorityQueue APIs
+java.util.PriorityQueue::makeHeap(I) MISSING
+java.util.PriorityQueue::mergeHeaps(I) MISSING
