Make demos use latest snapshot
Change-Id: Ie51e516a6fc337e0f72c2b50db6f3fe7a6cfcace

--- a/samples/mobilewebapp/pom.xml
+++ b/samples/mobilewebapp/pom.xml
@@ -11,7 +11,7 @@
 
   <properties>
     <!-- Convenience property to set the GWT version -->
-    <gwt.version>2.8.0-SNAPSHOT</gwt.version>
+    <gwt.version>HEAD-SNAPSHOT</gwt.version>
 
     <!-- Setting maven.compiler.source to something different to 1.8
          needs that you configure the sourceLevel in gwt-maven-plugin since
