--- a/samples/validation/pom.xml
+++ b/samples/validation/pom.xml
@@ -11,7 +11,7 @@
 
   <properties>
     <!-- Convenience property to set the GWT version -->
-    <gwt.version>2.8.0-SNAPSHOT</gwt.version>
+    <gwt.version>HEAD-SNAPSHOT</gwt.version>
 
     <!-- Setting maven.compiler.source to something different to 1.8
          needs that you configure the sourceLevel in gwt-maven-plugin since
