Fix incorrect comparison of object arrays in Arrays.deepEquals.
Change-Id: I7e1cdaae70f713af6071bb81f410fc25f5239864

--- a/tools/api-checker/config/gwt27_28userApi.conf
+++ b/tools/api-checker/config/gwt27_28userApi.conf
@@ -219,3 +219,6 @@ java.util.AbstractQueue::offer(Ljava/lang/Object;) MISSING
 java.util.AbstractQueue::peek() MISSING
 java.util.AbstractQueue::poll() MISSING
 java.util.AbstractSequentialList::size() MISSING
+
+# Add specialization for Objects.deepEquals
+java.util.Objects::deepEquals(Ljava/lang/Object;Ljava/lang/Object;) OVERLOADED_METHOD_CALL
