Fix the implementation of Stream.anyMatch/allMatch/noneMatch to support streams with null elements.
Bug: 9477
Bug-Link: https://github.com/gwtproject/gwt/issues/9477
Change-Id: I46290f2cde8d3ee075547a5673b7e8c693782b15

--- a/user/BUILD
+++ b/user/BUILD
@@ -530,6 +530,7 @@ AugmentedJar(
         "-Xep:SelfComparison:OFF",  # go/self-comparison-lsc
         "-Xep:SelfEquals:OFF",  # go/self-equals-lsc
         "-Xep:IdentityBinaryExpression:OFF",
+        "-Xep:CollectionIncompatibleType:OFF",
     ],
     deps = [
         "//third_party/java/jsr305_annotations",
