Suppress more ErrorProne warnings.
Change-Id: I9e3973040fcdcc2bb2ac4e30a2060e181e4dbc79

--- a/user/BUILD
+++ b/user/BUILD
@@ -429,6 +429,9 @@ java_library(
         "//third_party/java_src/gwt/svn/trunk/dev:compiler.standalone.super",
         "//third_party/java_src/gwt/svn/trunk/dev:servlet-deps",
     ],
+    javacopts = [
+        "-Xep:EqualsIncompatibleType:OFF",
+    ]
 )
 
 # The minimum requirements for GWT-RPC serializable object definition.
@@ -549,6 +552,7 @@ AugmentedJar(
         "-Xep:MissingCasesInEnumSwitch:OFF",
         "-Xep:FallThrough:OFF",
         "-Xep:ReturnValueIgnored:OFF",
+        "-Xep:JUnit3TestNotRun:OFF",
         "-Xep:EqualsIncompatibleType:OFF",
     ],
     deps = [
