--- a/dev/codeserver/build.xml
+++ b/dev/codeserver/build.xml
@@ -17,7 +17,7 @@
   <target name="compile.tests" depends="compile"
           description="Compile tests java source">
     <mkdir dir="${javac.junit.out}" />
-    <javac destdir="${javac.junit.out}">
+    <gwt.javac srcdir="" destdir="${javac.junit.out}">
       <src path="java" />
       <src path="javatests" />
       <classpath>
@@ -26,7 +26,7 @@
         <pathelement location="${gwt.dev.jar}" />
         <pathelement location="${gwt.tools.lib}/junit/junit-4.8.2.jar" />
       </classpath>
-    </javac>
+    </gwt.javac>
   </target>
 
   <target name="build" depends="compile" description="builds gwt-codeserver.jar">
